--- a/themes/freemind/layout/_partial/head.ejs
+++ b/themes/freemind/layout/_partial/head.ejs
@@ -58,6 +58,6 @@
   <script src="<%- config.root %>js/jquery-2.0.3.min.js"></script>
 
   <!-- analytics -->
-  <%- partial('post/analytics') %>
+  <%- partial('post/baidu_tongji') %>
 
 </head>
