解决非首页的文章feature图片显示失败的问题

--- a/themes/freemind/layout/_partial/post/entry.ejs
+++ b/themes/freemind/layout/_partial/post/entry.ejs
@@ -2,7 +2,7 @@
   <div class="row">
 	<% if (item.feature ) { %>
            <% if (config.post_asset_folder){ %>
-  	      <div class="thumbnail"><a href="<%- config.root %><%= item.path %>"><img src="<%= item.path %><%= item.feature %>" alt="<%= item.title %>"  class="nofancybox"></a>
+  	      <div class="thumbnail"><a href="<%- config.root %><%= item.path %>"><img src="<%- config.root %><%= item.path %><%= item.feature %>" alt="<%= item.title %>"  class="nofancybox"></a>
            <% } else { %>
               <div class="thumbnail"><a href="<%- config.root %><%= item.path %>"><img src="<%= item.feature %>" alt="<%= item.title %>"  class="nofancybox"></a>
            <% } %>
