--- a/themes/freemind/layout/_partial/post/entry.ejs
+++ b/themes/freemind/layout/_partial/post/entry.ejs
@@ -2,9 +2,9 @@
   <div class="row">
 	<% if (item.feature ) { %>
            <% if (config.post_asset_folder){ %>
-  	      <div class="thumbnail"><a href="<%- config.root %><%= item.path %>"><img src="<%- config.root %><%= item.path %><%= item.feature %>" alt="<%= item.title %>"  class="nofancybox"></a>
+  	      <div class="thumbnail" style="margin-top: 0px;"><a href="<%- config.root %><%= item.path %>"><img src="<%- config.root %><%= item.path %><%= item.feature %>" alt="<%= item.title %>"  class="nofancybox"></a>
            <% } else { %>
-              <div class="thumbnail"><a href="<%- config.root %><%= item.path %>"><img src="<%= item.feature %>" alt="<%= item.title %>"  class="nofancybox"></a>
+              <div class="thumbnail" style="margin-top: 0px;"><a href="<%- config.root %><%= item.path %>"><img src="<%= item.feature %>" alt="<%= item.title %>"  class="nofancybox"></a>
            <% } %>
 		</div>
 	<% } %>
