--- a/themes/freemind/layout/_partial/post/comment.ejs
+++ b/themes/freemind/layout/_partial/post/comment.ejs
@@ -5,13 +5,14 @@
         data-repo-id="R_kgDOJ4tM7g"
         data-category="Announcements"
         data-category-id="DIC_kwDOJ4tM7s4CXvDw"
-        data-mapping="url"
-        data-strict="0"
+        data-mapping="title"
+        data-strict="1"
         data-reactions-enabled="1"
         data-emit-metadata="0"
-        data-input-position="bottom"
+        data-input-position="top"
         data-theme="preferred_color_scheme"
         data-lang="zh-CN"
+        data-loading="lazy"
         crossorigin="anonymous"
         async>
     </script>
