优化百度统计功能

--- a/themes/freemind/layout/_partial/head.ejs
+++ b/themes/freemind/layout/_partial/head.ejs
@@ -58,6 +58,8 @@
   <script src="<%- config.root %>js/jquery-2.0.3.min.js"></script>
 
   <!-- analytics -->
+  <% if (theme.baidu_tongji.enable){ %>
   <%- partial('baidu_analytics') %>
+  <% } %>
 
 </head>
