--- a/themes/freemind/layout/_partial/baidu_analytics.ejs
+++ b/themes/freemind/layout/_partial/baidu_analytics.ejs
@@ -2,7 +2,7 @@
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?5d4268fe3f695d6111d5659760d4d452";
+  hm.src = "https://hm.baidu.com/hm.js?<%=theme.baidu_tongji.siteid%>";
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
